--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-
-
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
