--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Client for the EU Industrial Research and Industry Scoreboard 
 Version: 0.1.0
 Authors@R: person("Thierry", "Warin", email = "thierry.warin@skema.edu", role =c("aut", "cre"), comment = c(ORCID = "0000-0002-5921-3428") )
-Description: The Economics of Industrial Research & Innovation (IRI) is a scientific project carried out within the Directorate B: Growth and Innovation, one of the seven scientific institutes of the European Commission's Joint Research Centre (JRC) (<https://iri.jrc.ec.europa.eu/home/>). 'iriR' objective is to allows an easy connection with R to the European Commission's Economics of Industrial Research and Innovation data. Please cite: Warin, Th. (2020) "iriR: An R Package for the EU Industrial Research and Industry Scoreboard CHANGER DOI", <doi:10.6084/m9.figshare.11421573>.
+Description: The Economics of Industrial Research & Innovation (IRI) is a scientific project carried out within the Directorate B: Growth and Innovation, one of the seven scientific institutes of the European Commission's Joint Research Centre (JRC) (<https://iri.jrc.ec.europa.eu/home/>). 'iriR' objective is to allows an easy connection with R to the European Commission's Economics of Industrial Research and Innovation data. Please cite: Warin, Th. (2020) "iriR: An R Package for the EU Industrial Research and Industry Scoreboard", <10.6084/m9.figshare.11774640>.
 Imports: gsheet, dplyr,reshape2
 License: MIT + file LICENSE
 Encoding: UTF-8
