--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(iri_country)
 export(iri_data)
 export(iri_indicator)
 export(iri_industry)
+import(curl)
 import(dplyr)
 import(gsheet)
+import(readr)
 import(reshape2)
