--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
-pandoc: 2.3.1
+pandoc: 2.7.3
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles:
-  vignette: vignette.html
-last_built: 2020-05-07T14:11Z
+articles: []
+last_built: 2020-06-03T18:07Z
 
