--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.7.3
-pkgdown: 1.5.1
-pkgdown_sha: ~
-articles: []
-last_built: 2020-06-03T18:07Z
+pkgdown: 1.6.1.9000
+pkgdown_sha: e1e46f2e13c7efdb17bc4eae40bc3779c2b0b517
+articles:
+  vignette: vignette.html
+last_built: 2020-10-22T19:34Z
 
