--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: iriR
 Type: Package
-Title: Search and extract data about global innovation at the company level (more than 7,500 companies) from a database augmenting the Industrial R&D Investment Scoreboards (European Commission)
-Version: 0.2.900
+Title: Global Innovation Through Company Level Data
+Version: 0.2.1
 Authors@R: person("Thierry", "Warin", email = "thierry.warin@hec.ca", role =c("aut", "cre"), comment = c(ORCID = "0000-0002-5921-3428") )
 Description: Researchers and analysts have access to more than 7,500 innovative companies worldwide, which are or have been part of the top 1,000 innovative companies. They can access the six parameters that compose the global IRI Scoreboard's data on R&D: Country, Year, Company's name, Industry, Indicator and Company's rank. Please cite: Warin, Th. (2020) "iiriR: An R Package for the EU Industrial R&D Investment Scoreboard", <doi:10.6084/m9.figshare.11774640.v5>.
-URL: http://github.com/warint/iriR
+URL: https://github.com/warint/iriR/
 Imports: gsheet, dplyr, reshape2, ggplot2, ggsci, WDI, scales, stats
 License: MIT + file LICENSE
 Encoding: UTF-8
